[iOS] Update FindInPage animations

This CL changes the FindInPage appearance/disappearance animations,
making them smoother.

Bug: 863402
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I3712133c83f8bda2baef9e103c10c008326a567c
Reviewed-on: https://chromium-review.googlesource.com/1136542
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575254}
Former-commit-id: aba25af14971812ce432abea43b5f3138754c7da